openshift/pw-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pw-server
  labels:
    app: pw-server
spec:
  selector:
    app: pw-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
